# EthicsLab

./: Dockerfile  Dockerfile.api  Dockerfile.ollama  README.md  ollama.Dockerfile  pyproject.toml
.github/workflows/: docker-image.yml
k8s/: deployment.yaml
src/ethicslab/: app.py  main.py
src/ethicslab/api/: api.py
src/ethicslab/api/endpoints/: chat.py  tweet.py
src/ethicslab/schemas/: chat.py
src/ethicslab/services/: ollama.py
