[project]
name = "ethicslab"
version = "0.1.0"
description = "A project for ethical AI development"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.124.2",
    "pydtmc>=8.7.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pytest>=9.0.2",
]
